All_Component_DX/force-app/main/default/objects/PM_Schedule__c/PM_Schedule__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Visit schedules for PM Plan.</description>
    <label>PM Schedule</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>