All_Component_DX/force-app/main/default/objects/PM_Schedule__c/fields/Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date__c</fullName>
    <label>Last Run Date</label>
    <type>Date</type>
</CustomField>