All_Component_DX/force-app/main/default/objects/PM_Schedule__c/fields/Scheduled_On__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_On__c</fullName>
    <label>Scheduled On</label>
    <type>Date</type>
</CustomField>