All_Component_DX/force-app/main/default/objects/PM_Schedule__c/fields/SM_Advanced_Expression__c.field-meta.xml
<CustomField>
    <fullName>SM_Advanced_Expression__c</fullName>
    <description>Used to capture the advanced expression once the Work Order is closed. This is used to show actual output value of processed schedules in the Condition based PM configuration page.</description>
    <inlineHelpText>Used to capture the advanced expression once the Work Order is closed. This is used to show actual output value of processed schedules in the Condition based PM configuration page.</inlineHelpText>
    <label>Advanced Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>