All_Component_DX/force-app/main/default/objects/PM_Schedule__c/fields/SM_Expression_Actual_Output_Value__c.field-meta.xml
<CustomField>
    <fullName>SM_Expression_Actual_Output_Value__c</fullName>
    <description>Stores actual output value in JSON format, used for internal purpose.</description>
    <inlineHelpText>Stores actual output value in JSON format, used for internal purpose.</inlineHelpText>
    <label>Expression Actual Output Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>