All_Component_DX/force-app/main/default/objects/PM_Schedule__c/fields/SM_Expression_Internal_Value__c.field-meta.xml
<CustomField>
    <fullName>SM_Expression_Internal_Value__c</fullName>
    <description>To store expression value in the form of JSON used by engine for processing.</description>
    <label>Expression Internal Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>