All_Component_DX/force-app/main/default/objects/PM_Schedule__c/fields/SM_PM_Coverage__c.field-meta.xml
<CustomField>
    <fullName>SM_PM_Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM Coverage</label>
    <referenceTo>PM_Coverage__c</referenceTo>
    <relationshipLabel>PM Schedule</relationshipLabel>
    <relationshipName>PM_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>