All_Component_DX/force-app/main/default/objects/PM_Schedule__c/fields/SM_Status__c.field-meta.xml
<CustomField>
    <fullName>SM_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work Order Created</fullName>
            </value>
            <value>
                <fullName>Work Order Done</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>Exceeded Stop At</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>