All_Component_DX/force-app/main/default/objects/PM_Schedule__c/fields/SM_Work_Order_Purpose__c.field-meta.xml
<CustomField>
    <fullName>SM_Work_Order_Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Task Template object.</description>
    <label>Work Order Purpose</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>PM Schedule</relationshipLabel>
    <relationshipName>PM_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>